--- a/Resources/Prototypes/_NF/Entities/Clothing/Masks/masks.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Masks/masks.yml
@@ -2,7 +2,7 @@
   id: ClothingMaskArcadia
   name: arcadia battle mask
   parent: [ ClothingMaskGasExplorer, BaseC3ContrabandNoValue, ContrabandClothing ]
-  description: A close-fitting high tech mask designed by Arcadia Industries for space faring battlers.
+  description: A close-fitting high tech mask designed by Arcadia Industries for spacefaring operators.
   components:
   - type: Sprite
     sprite: _NF/Clothing/Mask/arcadia.rsi
@@ -30,22 +30,23 @@
     replacement: mumble
 
 - type: entity
-  parent: ClothingMaskPullableBase
+  parent: ClothingMaskGas
   id: ClothingMaskPilot
-  name: pilot breathing mask
-  description: A close-fitting breathing mask designed for, it would seems, minimal comfort of wearer.
+  name: pilot breath mask
+  description: A close-fitting breath mask designed for, it would seem, minimal comfort for the wearer.
   components:
   - type: Sprite
     sprite: _NF/Clothing/Mask/pilot.rsi
   - type: Clothing
     sprite: _NF/Clothing/Mask/pilot.rsi
-  - type: BreathMask
+  - type: IdentityBlocker
+    coverage: MOUTH
 
 - type: entity
   parent: [ BaseC2ContrabandUnredeemable, ClothingMaskGasSecurity ]
   id: ClothingMaskGasNfsd
   name: nfsd gas mask
-  description: A standard issue nfsd gas mask.
+  description: A standard issue NFSD gas mask.
   components:
   - type: Sprite
     sprite: _NF/Clothing/Mask/nfsd.rsi
@@ -68,7 +69,7 @@
   parent: [ BaseC3CultContrabandUnredeemable, ContrabandClothing, ClothingMaskGasExplorer ]
   id: ClothingMaskCultJanitor
   name: cult janitor mask
-  description: A close-fitting imposing breathing mask designed for acursed custodians who value style.
+  description: A close-fitting, imposing breath mask designed for accursed custodians who value style.
   components:
   - type: Sprite
     sprite: _NF/Clothing/Mask/cult_janitor_mask.rsi
@@ -82,7 +83,7 @@
   id: ClothingMaskPunkHalf
   parent: [ ClothingMaskGasExplorer, RecyclableItemClothDevice ]
   name: punk halfmask
-  description: A close-fitting breathing mask with gamer lights!
+  description: A close-fitting breath mask with gamer lights!
   suffix: Random visuals
   components:
   - type: Sprite
@@ -112,3 +113,5 @@
         equipped-MASK: CyberpunkDark
       mask_decor:
         decor-equipped-MASK: CyberpunkNeon
+  - type: IdentityBlocker
+    coverage: MOUTH
