Added rubber ammo to SecurityTechFab
Moved nonlethal recipes from dynamic to static for SecurityTechFab inherited by NfsdTechFab

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -857,8 +857,13 @@
       - Zipties
       - ThrusterSecurityMachineCircuitboard # Frontier
       - ClothingOuterHardsuitEVAPrisoner # Frontier
+      - BoxBeanbag # Frontier
+      - MagazineBoxLightRifleRubber # Frontier
+      - MagazineBoxMagnumRubber # Frontier
+      - MagazineBoxPistolRubber # Frontier
+      - MagazineBoxRifleRubber # Frontier
+      - MagazineShotgunBeanbag # Frontier
     dynamicRecipes:
-      - BoxBeanbag
       - BoxShotgunIncendiary
       - BoxShotgunUranium
       - BoxShellTranquilizer
@@ -884,7 +889,6 @@
       - MagazinePistolUranium
       - MagazineRifleIncendiary
       - MagazineRifleUranium
-      - MagazineShotgunBeanbag
       - MagazineShotgunIncendiary
       - PortableRecharger
       - PowerCageHigh
@@ -911,10 +915,6 @@
       - ContrabandAppraisalTool # Frontier
       - SpeedLoaderRifleHeavyIncendiary # Frontier
       - SpeedLoaderRifleHeavyUranium # Frontier
-      - MagazineBoxLightRifleRubber # Frontier
-      - MagazineBoxMagnumRubber # Frontier
-      - MagazineBoxPistolRubber # Frontier
-      - MagazineBoxRifleRubber # Frontier
   - type: MaterialStorage
     whitelist:
       tags:
