--- a/Resources/Prototypes/_NF/Entities/Structures/Storage/Closets/Lockers/lockers.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Storage/Closets/Lockers/lockers.yml
@@ -11,7 +11,7 @@
 - type: entity
   id: LockerMailCarrier
   parent: NFLockerBaseSecure
-  name: mail's locker
+  name: mail carrier's locker
   components:
   - type: EntityStorageVisuals
     stateBaseClosed: mail
