Return and comment shotgun recipes

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -864,6 +864,7 @@
       - MagazineBoxRifleRubber # Frontier
       - MagazineShotgunBeanbag # Frontier
     dynamicRecipes:
+      # - BoxBeanbag # Frontier: moved to static
       - BoxShotgunIncendiary
       - BoxShotgunUranium
       - BoxShellTranquilizer
@@ -889,6 +890,7 @@
       - MagazinePistolUranium
       - MagazineRifleIncendiary
       - MagazineRifleUranium
+      # - MagazineShotgunBeanbag # Frontier: moved to static
       - MagazineShotgunIncendiary
       - PortableRecharger
       - PowerCageHigh
