--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -578,7 +578,7 @@
       - BoxLethalshot
       - BoxShotgunPractice
       - BoxShotgunSlug
-      - ClothingEyesHudSecurity
+      - ClothingEyesHudNfsd
       - CombatKnife
       - Flash
       - ForensicPad
@@ -614,10 +614,13 @@
       - TargetHuman
       - TargetSyndicate
       - WeaponDisablerPractice
-      - WeaponFlareGunSecurity
+#      - WeaponFlareGunSecurity
       - WeaponLaserCarbinePractice
       - Zipties
-      - ThrusterSecurityMachineCircuitboard
+      - ThrusterNfsdMachineCircuitboard
+      - SmallThrusterMachineCircuitboard
+      - GyroscopeNfsdMachineCircuitboard
+      - SmallGyroscopeNfsdMachineCircuitboard
       - ClothingOuterHardsuitEVAPrisoner
       - BoxBeanbag
       - MagazineBoxLightRifleRubber
@@ -627,7 +630,7 @@
       - MagazineShotgunBeanbag
       - WeaponDisabler
       - ContrabandAppraisalTool
-      - HoloprojectorSecurity
+      - HoloprojectorNfsd
       - ClothingBackpackElectropack
     dynamicRecipes:
       - BoxShotgunIncendiary
