--- a/Resources/Prototypes/Entities/Objects/Materials/materials.yml
+++ b/Resources/Prototypes/Entities/Objects/Materials/materials.yml
@@ -434,10 +434,10 @@
         Quantity: 3
   - type: Tag
     tags:
-      - MothFood
       - DroneUsable
       - ClothMade
       - RawMaterial
+  - type: MothFood # Frontier
 
 - type: entity
   parent: MaterialCotton
@@ -490,6 +490,7 @@
     tags:
       - ClothMade
       - RawMaterial
+  - type: MothFood # Frontier
 
 - type: entity
   parent: MaterialPyrotton
