Fix Frontier comments, EMP label consistency

--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/pistol.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Ammunition/Cartridges/pistol.yml
@@ -25,4 +25,4 @@
   - type: EmpDescription
     range: 0.3
     energyConsumption: 2700000
-    disableDuration: 10 # Frontier 10<60
+    disableDuration: 10
