--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Battery/battery_guns.yml
@@ -35,10 +35,10 @@
     steps: 5
     zeroVisible: true
   - type: Appearance
-  - type: EmpDescription # Frontier
-    range: 2 # Frontier
-    energyConsumption: 2700000 # Frontier
-    disableDuration: 30 # Frontier
+  - type: EmpDescription
+    range: 2
+    energyConsumption: 2700000
+    disableDuration: 30
 
 - type: entity
   id: WeaponLaserTurboNF
