--- a/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Ammunition/explosives.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Weapons/Guns/Ammunition/explosives.yml
@@ -17,10 +17,10 @@
   - type: Sprite
     sprite: _NF/Objects/Weapons/Guns/Ammunition/Explosives/explosives.rsi
     state: rpg-emp
-  - type: EmpDescription # Frontier
-    range: 2 # Frontier
-    energyConsumption: 2700000 # Frontier
-    disableDuration: 30 # Frontier
+  - type: EmpDescription
+    range: 2
+    energyConsumption: 2700000
+    disableDuration: 30
 
 # Cannon Balls
 - type: entity
