--- a/Resources/IgnoredPrototypes/ignoredPrototypes.yml
+++ b/Resources/IgnoredPrototypes/ignoredPrototypes.yml
@@ -9,3 +9,5 @@
  - /Prototypes/GameRules/events.yml # Frontier - Fuck this file
  - /Prototypes/Procedural/Themes/vgroidinterior.yml
  - /Prototypes/Procedural/vgroid.yml
+ - /Prototypes/Procedural/salvage_loot.yml
+ - /Prototypes/Procedural/salvage_rewards.yml
