add NF prefix to OreDiamondDense refs

--- a/Resources/Prototypes/_NF/Entities/Structures/Walls/walls.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Walls/walls.yml
@@ -146,7 +146,7 @@
   components:
     - type: OreVein
       oreChance: 1.0
-      currentOre: OreDiamondDense
+      currentOre: NFOreDiamondDense
     - type: Sprite
       layers:
         - map: [ "enum.CornerLayers.SE" ]
@@ -607,7 +607,7 @@
   components:
     - type: OreVein
       oreChance: 1.0
-      currentOre: OreDiamondDense
+      currentOre: NFOreDiamondDense
     - type: Sprite
       layers:
         - map: [ "enum.CornerLayers.SE" ]
@@ -1068,7 +1068,7 @@
   components:
     - type: OreVein
       oreChance: 1.0
-      currentOre: OreDiamondDense
+      currentOre: NFOreDiamondDense
     - type: Sprite
       layers:
         - map: [ "enum.CornerLayers.SE" ]
@@ -1530,7 +1530,7 @@
   components:
     - type: OreVein
       oreChance: 1.0
-      currentOre: OreDiamondDense
+      currentOre: NFOreDiamondDense
     - type: Sprite
       layers:
         - map: [ "enum.CornerLayers.SE" ]
@@ -1991,7 +1991,7 @@
   components:
     - type: OreVein
       oreChance: 1.0
-      currentOre: OreDiamondDense
+      currentOre: NFOreDiamondDense
     - type: Sprite
       layers:
         - map: [ "enum.CornerLayers.SE" ]
@@ -2452,7 +2452,7 @@
   components:
     - type: OreVein
       oreChance: 1.0
-      currentOre: OreDiamondDense
+      currentOre: NFOreDiamondDense
     - type: Sprite
       layers:
         - map: [ "enum.CornerLayers.SE" ]
@@ -2913,7 +2913,7 @@
   components:
     - type: OreVein
       oreChance: 1.0
-      currentOre: OreDiamondDense
+      currentOre: NFOreDiamondDense
     - type: Sprite
       layers:
         - map: [ "enum.CornerLayers.SE" ]
