--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -788,6 +788,7 @@
       - WeaponRifleGestio
       - BaseBallBatNF
       - CrossbowModern
+      - WeaponPistolPollock
     ## Ammo boxes
       - BoxLethalshot
       - MagazineBoxLightRifle
