--- a/Resources/Prototypes/DeltaV/Entities/Objects/Weapons/Guns/Revolvers/revolvers.yml
+++ b/Resources/Prototypes/DeltaV/Entities/Objects/Weapons/Guns/Revolvers/revolvers.yml
@@ -59,8 +59,8 @@
     fireRate: 2
     availableModes:
     - SemiAuto
+  - type: RevolverAmmoProvider
     proto: CartridgeMagnum
-    capacity: 6
     chambers: [ True, True, True, True, True, True ]
     ammoSlots: [ null, null, null, null, null, null ]
   - type: StaticPrice
